--- a/styles.css
+++ b/styles.css
@@ -8,44 +8,125 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+/* For Webkit Browsers (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+    height: 0; /* Remove horizontal scrollbar space */
+}
+
+::-webkit-scrollbar-thumb {
+    background: transparent; /* Hide scrollbar handle */
+}
+
+/* For Firefox */
+body {
+    scrollbar-width: none; /* Firefox 64 and later */
+    scrollbar-color: transparent transparent; /* Set scrollbar color to transparent */
+}
+
+body::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
+
 /* Navbar styling */
-.navbar {
+
+header{
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    padding: 0.2rem 1.2rem;
-    margin: 0;
-    z-index: 10;
+    padding: 0.5rem 1rem;
 }
 
-.navbar ul {
-    width: 100%;
-    list-style: none;
+nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    gap: 2.5rem;
+    background-color: #242424;
+    border: 2px solid rgb(89,94,78);
+    border-radius: 100px;
+    padding: 0.7rem 3.5rem;
 }
 
-.navbar ul .links{
+nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.3rem;
+    position: relative; /* Position relative to control pseudo-element */
+}
+
+nav a::after{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #ccf158; /* Neon green */
+    left: 0;
+    bottom: 0;
+    transition: width 0.3s; /* Smooth width transition */
+}
+
+nav a:hover::after {
+    width: 100%;
+}
+
+nav a.active{
+    color: #ccf158; /* Neon green */
+}
+
+
+.socials{
     display: flex;
     justify-content: space-between;
-    gap: 1rem;
+    align-items: center;
+    gap: 20px;
+}
+
+.social-logo-face{
+    height: 40px;
+    width: 40px;
+}
+
+.social-logo-insta{
+    height: 33px;
+    width: 33px;
 }
 
 
-.navbar a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-}
-
-
-.navbar ul li a img {
+a img {
     height: 70px;
 
+}
+
+
+.scroll p{
+    position: absolute;
+    color: white;
+    z-index: 1;
+    top: 80%;
+    left: 5%;
+    transform: translate(-5%, 0);
+    font-size: 1.5rem;
+    font-family: 'Dela Gothic One';
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
 }
 
 /* Hero section styling */
@@ -57,6 +138,9 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .hero-content {
@@ -69,7 +153,7 @@
 }
 
 .hero h1 {
-    font-family: Dela Gothic One;
+    font-family: 'Dela Gothic One';
     max-width: 1000px;
     font-size: 6rem;
     margin: 0;
@@ -125,6 +209,10 @@
 
 }
 
+
+.about{
+    height: 100vh;
+}
 
 
 @keyframes marquee {
