--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,12 @@ nav a:hover::after {
 
 nav a.active{
     color: #ccf158; /* Neon green */
+    font-weight: bold;
 }
 
+nav a.active::after {
+    width: 100%;
+}
 
 .socials{
     display: flex;
@@ -105,17 +109,26 @@ a img {
 }
 
 
-.scroll p{
+.scroll{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     color: white;
     z-index: 1;
     top: 80%;
     left: 5%;
     transform: translate(-5%, 0);
-    font-size: 1.5rem;
-    font-family: 'Dela Gothic One';
     animation: bounce 2s infinite;
 }
+
+.scroll p{
+    font-size: 1.5rem;
+    font-family: 'Dela Gothic One';
+ 
+}
+
 
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -224,5 +237,108 @@ a img {
     }
 }
 
+input.hamburger {
+    display: none;
+}
+
+label{
+    display: none;
+}
 
 
+@media (max-width: 768px){
+
+
+    .socials{
+        display: none;
+    }
+
+    input.hamburger:checked ~ .scroll{
+        display: none;
+    }
+
+    nav{
+        padding: 0;
+        position: absolute;
+        top: 90px;
+        background-color: transparent;
+        left: 0;
+        flex-direction: column;
+        border-radius: 0;
+        border: none;
+        width: 100%;
+        justify-content: flex-start;
+        align-items: center;
+        height: 0;
+        gap: 0;
+        z-index: 1;
+        overflow: hidden;
+        transition: all 0.4s;
+    }
+
+    input.hamburger:checked + header nav{
+        background-color: #242424;
+        height: 100vh;
+    }
+
+    header{
+        background-color: transparent;
+        transition: all 0.4s;
+    }
+
+    input.hamburger:checked + header{
+        background-color: #242424;
+    }
+
+
+    nav a:nth-child(1){
+        margin-top: 70px;
+    }
+
+    nav a{
+        text-align: center;
+        width: 100%;
+        font-size: 4rem;
+        padding: 1rem 0;
+        transition: all 0.2s;
+    }
+
+    nav a:active{
+        background-color: #ccf158;
+        color: black;
+    }
+
+    nav a.active::after {
+        width: 0%;
+    }
+    
+    label{
+        display: block;
+        height: 30px;
+        width: 45px;
+        position: relative;
+    }
+
+    label div{
+        width: 100%;
+        background-color: #ccf158;
+        height: 5px;
+        border-radius: 90px;
+        position: absolute;
+        transform: translateY(-50%);
+    }
+
+    label div:nth-child(1){
+        top: 0;
+    }
+    label div:nth-child(2){
+        top: 50%;
+    }
+    label div:nth-child(3){
+        top: 100%;
+    }
+
+
+
+
+}   
