--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,8 @@ a img {
 .about{
     height: 80vh;
     background-color: #000;
+    position: relative;
+    overflow: hidden;
 }
 
 .about .content {
@@ -231,6 +233,7 @@ a img {
     gap: 2rem;
     align-items: center;
     height: 50rem;
+    z-index: 2;
 }
 
 .about > .content > h1 {
@@ -347,6 +350,37 @@ a img {
 
 }
 
+
+.about .blob{
+    height: 500px;
+    width: 500px;
+    position: absolute;
+    top: 60%;
+    left: -10%;
+    z-index: -0;
+    background-color: #63752b;
+    border-radius: 50%;
+    filter: blur(280px);
+}
+
+.about .synth{
+    height: 300px;
+    width: 1000px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    z-index: 0;
+    rotate: 20deg;
+    transform: translate(20%, -120%);
+}
+
+.about .synth img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    filter: grayscale(100%);
+    filter:blur(15px);
+}
 
 .mapa{
     height: 50vh;
