Addded dark mode map

--- a/styles.css
+++ b/styles.css
@@ -426,9 +426,10 @@ a img {
     width: 50%;
     border: 4px solid #ccf158;
     border-radius: 12px;
-    box-shadow: 0 5px 10px #ccf158,
-                0 5px 15px #ccf158,
-                0 5px 20px #ccf158;
+    box-shadow: 0 5px 10px #7245ef,
+                0 5px 15px #7245ef,
+                0 5px 20px #7245ef;
+    filter: invert(90%);
 
 
 }
