--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ a img {
     align-items: center;
     position: relative;
     overflow: hidden;
-    background: url('./images/hero.png');
+    background: url('./images/hero.webp');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -493,6 +493,18 @@ a img {
 }
 
 
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    width: 100%;
+    background-color: #ccf158;
+}
+
+
+
 @keyframes marquee {
     0% {
         transform: translateX(0%);
@@ -520,6 +532,40 @@ input.hamburger {
 
 label{
     display: none;
+}
+
+/* Preloader Styles */
+#preloader {
+    position: fixed; /* Fix to cover the viewport */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #242424; /* Background color for preloader */
+    display: flex; /* Center the spinner */
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* High z-index to cover all content */
+}
+
+/* Simple Spinner */
+.spinner {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #ccf158; /* Neon green */
+    border-radius: 50%;
+    width: 90px;
+    height: 90px;
+    animation: spin 1s linear infinite; /* Rotate animation */
+}
+
+/* Spinner Animation */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 
@@ -636,6 +682,9 @@ label{
         transform: rotate(-45deg);
     }
 
+    .cards{
+        flex-wrap: wrap;
+    }
 
 
 }   
